--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </ul>
               </li>
 
-              <div class="nav-item col-4">
+              <div class="nav-item col-4 me-5">
                 <form class="d-flex" role="search">
                   <input
                     class="form-control me-2 col-4"
@@ -92,21 +92,39 @@
                     placeholder="Search"
                     aria-label="Search"
                   />
-                  <button class="btn btn-outline-success col-" type="submit">
+                  <button
+                    class="btn btn-outline-success col-2 me-2"
+                    type="submit "
+                  >
                     Search
                   </button>
                 </form>
               </div>
 
-              <li class="nav-item mb-200">
+              <li class="nav-item ms-5">
                 <a class="nav-link" aria-current="page" href="#"
                   >Udemy Business</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item me-3">
                 <a class="nav-link" href="#">Teach on Udemy</a>
               </li>
 
+              <li class="nav-item me-3">
+                <a class="nav-link" href="#"><img src="/Media/cart-icon.svg" alt=""></a>
+              </li>
+
+              <li class="nav-item me-3">
+                <a class="nav-link btn btn-outline-dark" href="#">Login</a>
+              </li>
+
+              <li class="nav-item me-3">
+                <a class="nav-link btn btn-dark" href="#" style="color: white;">Sign up</a>
+              </li>
+
+              <li class="nav-item me-3">
+                <a class="nav-link btn btn-outline-dark" href="#"><img src="/Media/tabler_world.svg" alt=""></a>
+              </li>
               <!-- <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
             </li> -->
