--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,7 @@
     <div class="shadow p-3 mb-5 bg-body rounded">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="/index.html"
             ><img src="/Media/logo-udemy.svg" alt="" width="75px"
           /></a>
           <button
@@ -111,7 +111,7 @@
               </li>
 
               <li class="nav-item me-3">
-                <a class="nav-link" href="/cart.html"><img src="/Media/cart-icon.svg" alt=""></a>
+                <a class="nav-link" href="#"><img src="/Media/cart-icon.svg" alt=""></a>
               </li>
 
               <li class="nav-item me-3">
@@ -134,35 +134,16 @@
       </nav>
     </div>
 
-    <!-- Carousel -->
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="5000">
-            <img src="/Media/7869fd17-9599-4a5e-9b03-4748a3dae016.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <img src="/Media/e6cc1a30-2dec-4dc5-b0f2-c5b656909d5b.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <img src="/Media/slider img 3.svg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+    <h1 class="cart-text">Shopping Cart</h1>
+    <h6 id="courses-in-cart"><strong> 0 Courses in Cart</strong></h6>
 
-
+    <img id="emptycart" src="/Media/empty-shopping-cart-v2.jpg" alt="">
+    <p id="emptytext">Your cart is empty. Keep shopping to find a course!</p>
 
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"
+  ></script>
+</body>
 </html>
