--- a/cart.html
+++ b/cart.html
@@ -140,6 +140,8 @@
     <img id="emptycart" src="/Media/empty-shopping-cart-v2.jpg" alt="">
     <p id="emptytext">Your cart is empty. Keep shopping to find a course!</p>
 
+    <button id="shopnow" type="button" class="btn btn-primary"><strong>Keep Shopping</strong></button>
+
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
