Images Error Fix

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     class="btn btn-outline-success col-2 me-2"
                     type="submit "
                   >
-                    <img src="/Media/search-ico.svg" alt="">
+                    <img src="search-ico.svg" alt="">
                   </button>
                 </form>
               </div>
@@ -111,7 +111,7 @@
               </li>
 
               <li class="nav-item me-3">
-                <a class="nav-link" href="/cart.html"><img src="/Media/cart-icon.svg" alt=""></a>
+                <a class="nav-link" href="/cart.html"><img src="cart-icon.svg" alt=""></a>
               </li>
 
               <li class="nav-item me-3">
@@ -123,7 +123,7 @@
               </li>
 
               <li class="nav-item me-3">
-                <a class="nav-link btn btn-outline-dark" href="#"><img src="/Media/tabler_world.svg" alt=""></a>
+                <a class="nav-link btn btn-outline-dark" href="#"><img src="tabler_world.svg" alt=""></a>
               </li>
               <!-- <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
@@ -138,13 +138,13 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="5000">
-            <img src="/Media/7869fd17-9599-4a5e-9b03-4748a3dae016.jpg" class="d-block w-100" alt="...">
+            <img src="7869fd17-9599-4a5e-9b03-4748a3dae016.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="cjpgarousel-item" data-bs-interval="3000">
+            <img src="e6cc1a30-2dec-4dc5-b0f2-c5b656909d5b.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="/Media/e6cc1a30-2dec-4dc5-b0f2-c5b656909d5b.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <img src="/Media/slider img 3.svg" class="d-block w-100" alt="...">
+            <img src="slider img 3.svg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
