Added Headings on Home Page

--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html"
-            ><img src="/Media/logo-udemy.svg" alt="" width="75px"
+            ><img src="logo-udemy.svg" alt="" width="75px"
           /></a>
           <button
             class="navbar-toggler"
@@ -96,7 +96,7 @@
                     class="btn btn-outline-success col-2 me-2"
                     type="submit "
                   >
-                    <img src="/Media/search-ico.svg" alt="">
+                    <img src="search-ico.svg" alt="">
                   </button>
                 </form>
               </div>
@@ -111,7 +111,7 @@
               </li>
 
               <li class="nav-item me-3">
-                <a class="nav-link" href="#"><img src="/Media/cart-icon.svg" alt=""></a>
+                <a class="nav-link" href="#"><img src="cart-icon.svg" alt=""></a>
               </li>
 
               <li class="nav-item me-3">
@@ -123,7 +123,7 @@
               </li>
 
               <li class="nav-item me-3">
-                <a class="nav-link btn btn-outline-dark" href="#"><img src="/Media/tabler_world.svg" alt=""></a>
+                <a class="nav-link btn btn-outline-dark" href="#"><img src="tabler_world.svg" alt=""></a>
               </li>
               <!-- <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
@@ -137,7 +137,7 @@
     <h1 class="cart-text">Shopping Cart</h1>
     <h6 id="courses-in-cart"><strong> 0 Courses in Cart</strong></h6>
 
-    <img id="emptycart" src="/Media/empty-shopping-cart-v2.jpg" alt="">
+    <img id="emptycart" src="empty-shopping-cart-v2.jpg" alt="">
     <p id="emptytext">Your cart is empty. Keep shopping to find a course!</p>
 
     <button id="shopnow" type="button" class="btn btn-primary"><strong>Keep Shopping</strong></button>
