--- a/index.html
+++ b/index.html
@@ -206,9 +206,71 @@
 
   <div class="courses">
     <div class="course1">
-      <img src="/complete web.jpg" alt="">
+      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div>
+        <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
+    <p style="color: grey;">Dr.Angle Yu</p>
+    <span style="color:brown ;"><strong>4.7</strong></span> <span style="color:darkgoldenrod ;">&#9733 &#9733 &#9733 &#9733 &#9733</span> <br>
+    <p>₹389 <span> <del>₹3,499</del></span></p>   
+    <span style="background-color:yellow;">Best seller</span>
+      </div>
+    </div>
+
+    <div class="course1">
+      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div>
+        <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
+    <p style="color: grey;">Dr.Angle Yu</p>
+    <span style="color:brown ;"><strong>4.7</strong></span> <span style="color:darkgoldenrod ;">&#9733 &#9733 &#9733 &#9733 &#9733</span> <br>
+    <p>₹389 <span> <del>₹3,499</del></span></p>   
+    <span style="background-color:yellow;">Best seller</span>
+      </div>
+    </div>
+
+    <div class="course1">
+      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div>
+        <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
+    <p style="color: grey;">Dr.Angle Yu</p>
+    <span style="color:brown ;"><strong>4.7</strong></span> <span style="color:darkgoldenrod ;">&#9733 &#9733 &#9733 &#9733 &#9733</span> <br>
+    <p>₹389 <span> <del>₹3,499</del></span></p>   
+    <span style="background-color:yellow;">Best seller</span>
+      </div>
+    </div>
+
+    <div class="course1">
+      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div>
+        <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
+    <p style="color: grey;">Dr.Angle Yu</p>
+    <span style="color:brown ;"><strong>4.7</strong></span> <span style="color:darkgoldenrod ;">&#9733 &#9733 &#9733 &#9733 &#9733</span> <br>
+    <p>₹389 <span> <del>₹3,499</del></span></p>   
+    <span style="background-color:yellow;">Best seller</span>
+      </div>
+    </div>
+
+    <div class="course1">
+      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div>
+        <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
+    <p style="color: grey;">Dr.Angle Yu</p>
+    <span style="color:brown ;"><strong>4.7</strong></span> <span style="color:darkgoldenrod ;">&#9733 &#9733 &#9733 &#9733 &#9733</span> <br>
+    <p>₹389 <span> <del>₹3,499</del></span></p>   
+    <span style="background-color:yellow;">Best seller</span>
+      </div>
     </div>
   </div>
+
+  <div class="categories"><h5><strong>Top categories</strong></h5></div>
+
+  <div class="illustrations">
+    <div></div>
+  </div>
+
+
+
+
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
