--- a/index.html
+++ b/index.html
@@ -264,7 +264,41 @@
   <div class="categories"><h5><strong>Top categories</strong></h5></div>
 
   <div class="illustrations">
-    <div></div>
+    <div><img src="/design.jpg" alt="">
+      <div style="text-align:center;"><p><strong>Design</strong></p></div>
+    </div>
+
+    <div><img src="/development.jpg" alt="">
+      <div style="text-align:center;"><p><strong>Development</strong></p></div>
+    </div>
+
+    <div><img src="/maketing.jpg" alt="">
+      <div style="text-align:center;"><p><strong>Marketing</strong></p></div>
+    </div>
+
+    <div><img src="/it and software.jpg" alt="">
+      <div style="text-align:center;"><p><strong>IT and Software</strong></p></div>
+    </div>
+
+    <div><img src="/design.jpg" alt="">
+      <div style="text-align:center;"><p><strong>Design</strong></p></div>
+    </div>
+
+    <div><img src="/development.jpg" alt="">
+      <div style="text-align:center;"><p><strong>Development</strong></p></div>
+    </div>
+
+    <div><img src="/maketing.jpg" alt="">
+      <div style="text-align:center;"><p><strong>Marketing</strong></p></div>
+    </div>
+
+    <div><img src="/it and software.jpg" alt="">
+      <div style="text-align:center;"><p><strong>IT and Software</strong></p></div>
+    </div>
+  </div>
+
+  <div class="featured">
+    <h3>Featured topics by category</h3>
   </div>
 
 
