--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img src="/logo-udemy.svg" alt="" width="75px"
+            ><img src="/Media/logo-udemy.svg" alt="" width="75px"
           /></a>
           <button
             class="navbar-toggler"
@@ -94,7 +94,7 @@
                     class="btn btn-outline-success col-2 me-5"
                     type="submit "
                   >
-                    <img src="search-ico.svg" alt="" />
+                    <img src="/Media/search-ico.svg" alt="" />
                   </button>
                 </form>
               </div>
@@ -110,7 +110,7 @@
 
               <li class="nav-item me-3">
                 <a class="nav-link" href="/cart.html"
-                  ><img src="cart-icon.svg" alt=""
+                  ><img src="/Media/cart-icon.svg" alt=""
                 /></a>
               </li>
 
@@ -126,7 +126,7 @@
 
               <li class="nav-item me-auto">
                 <a class="nav-link btn btn-outline-dark" href="#"
-                  ><img src="tabler_world.svg" alt=""
+                  ><img src="/Media/tabler_world.svg" alt=""
                 /></a>
               </li>
               <!-- <li class="nav-item">
@@ -147,14 +147,14 @@
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="7000">
           <img
-            src="/7869fd17-9599-4a5e-9b03-4748a3dae016.jpg"
+            src="/Media/7869fd17-9599-4a5e-9b03-4748a3dae016.jpg"
             class="d-block w-100"
             alt="..."
           />
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <img
-            src="/e6cc1a30-2dec-4dc5-b0f2-c5b656909d5b.jpg"
+            src="/Media/e6cc1a30-2dec-4dc5-b0f2-c5b656909d5b.jpg"
             class="d-block w-100"
             alt="..."
           />
@@ -187,17 +187,17 @@
 
   <div class="headings">
     <div class="head1">
-      <div class="img1"><img src="/play circle.svg" alt=""></div>
+      <div class="img1"><img src="/Media/play circle.svg" alt=""></div>
       <div> <strong>Learn in-demand skills with over <br> 204,000 video courses.</strong></div>
     </div>
 
     <div class="head2">
-      <div class="img1"><img src="/play circle.svg" alt=""></div>
+      <div class="img1"><img src="/Media/play circle.svg" alt=""></div>
       <div><strong>Choose courses taught by real-world <br>experts</strong></div>
     </div>
 
     <div class="head3">
-      <div class="img1"><img src="/play circle.svg" alt=""></div>
+      <div class="img1"><img src="/Media/play circle.svg" alt=""></div>
       <div><strong>Learn at your own pace,with lifetime <br> access on mobile and desktop</strong></div>
     </div>
   </div>
@@ -206,7 +206,7 @@
 
   <div class="courses">
     <div class="course1">
-      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div class="img"><img src="Media/complete web.jpg" alt=""></div>
       <div>
         <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
     <p style="color: grey;">Dr.Angle Yu</p>
@@ -217,7 +217,7 @@
     </div>
 
     <div class="course1">
-      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div class="img"><img src="Media/complete web.jpg" alt=""></div>
       <div>
         <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
     <p style="color: grey;">Dr.Angle Yu</p>
@@ -228,7 +228,7 @@
     </div>
 
     <div class="course1">
-      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div class="img"><img src="/Media/complete web.jpg" alt=""></div>
       <div>
         <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
     <p style="color: grey;">Dr.Angle Yu</p>
@@ -239,7 +239,7 @@
     </div>
 
     <div class="course1">
-      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div class="img"><img src="/Media/complete web.jpg" alt=""></div>
       <div>
         <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
     <p style="color: grey;">Dr.Angle Yu</p>
@@ -250,7 +250,7 @@
     </div>
 
     <div class="course1">
-      <div class="img"><img src="/complete web.jpg" alt=""></div>
+      <div class="img"><img src="/Media/complete web.jpg" alt=""></div>
       <div>
         <p><strong>The complete 2022 Web <br> Development Bootcamp</strong></p>
     <p style="color: grey;">Dr.Angle Yu</p>
@@ -264,43 +264,100 @@
   <div class="categories"><h5><strong>Top categories</strong></h5></div>
 
   <div class="illustrations">
-    <div><img src="/design.jpg" alt="">
+    <div><img src="/Media/design.jpg" alt="">
       <div style="text-align:center;"><p><strong>Design</strong></p></div>
     </div>
 
-    <div><img src="/development.jpg" alt="">
+    <div><img src="/Media/development.jpg" alt="">
       <div style="text-align:center;"><p><strong>Development</strong></p></div>
     </div>
 
-    <div><img src="/maketing.jpg" alt="">
+    <div><img src="/Media/maketing.jpg" alt="">
       <div style="text-align:center;"><p><strong>Marketing</strong></p></div>
     </div>
 
-    <div><img src="/it and software.jpg" alt="">
+    <div><img src="/Media/it and software.jpg" alt="">
       <div style="text-align:center;"><p><strong>IT and Software</strong></p></div>
     </div>
 
-    <div><img src="/design.jpg" alt="">
+    <div><img src="/Media/design.jpg" alt="">
       <div style="text-align:center;"><p><strong>Design</strong></p></div>
     </div>
 
-    <div><img src="/development.jpg" alt="">
+    <div><img src="/Media/development.jpg" alt="">
       <div style="text-align:center;"><p><strong>Development</strong></p></div>
     </div>
 
-    <div><img src="/maketing.jpg" alt="">
+    <div><img src="/Media/maketing.jpg" alt="">
       <div style="text-align:center;"><p><strong>Marketing</strong></p></div>
     </div>
 
-    <div><img src="/it and software.jpg" alt="">
+    <div><img src="/Media/it and software.jpg" alt="">
       <div style="text-align:center;"><p><strong>IT and Software</strong></p></div>
     </div>
   </div>
 
-  <div class="featured">
-    <h3>Featured topics by category</h3>
+  <div style="margin-left:5vw; margin-top:3vw;"><h3>Featured topics by categories</h3></div>
+<div class="featured">
+
+  <div>
+    <h3>Development</h3>
+    <div id="py"><a href="">Python</a>
+    <p style="color: grey;">99,999,999</p></div>
+
+    <div id="py"><a href="">Web Development</a>
+      <p style="color: grey;">99,999,999</p></div>
+
+      <div id="py"><a href="">Machine Learning</a>
+        <p style="color: grey;">99,999,999</p></div>
   </div>
 
+  <div>
+    <h3>Business</h3>
+    <div id="py"><a href="">Financial Analysis</a>
+    <p style="color: grey;">99,999,999</p></div>
+
+    <div id="py"><a href="">SQL</a>
+      <p style="color: grey;">99,999,999</p></div>
+
+      <div id="py"><a href="">PMP</a>
+        <p style="color: grey;">99,999,999</p></div>
+  </div>
+
+  <div>
+    <h3>IT & Software</h3>
+    <div id="py"><a href="">AWS Certification</a>
+    <p style="color: grey;">99,999,999</p></div>
+
+    <div id="py"><a href="">Ethical Hacking</a>
+      <p style="color: grey;">99,999,999</p></div>
+
+      <div id="py"><a href="">Cyber Security</a>
+        <p style="color: grey;">99,999,999</p></div>
+  </div>
+
+  <div>
+    <h3>Design</h3>
+    <div id="py"><a href="">Photoshop</a>
+    <p style="color: grey;">99,999,999</p></div>
+
+    <div id="py"><a href="">Graphic Design</a>
+      <p style="color: grey;">99,999,999</p></div>
+
+      <div id="py"><a href="">Drawing</a>
+        <p style="color: grey;">99,999,999</p></div>
+  </div>
+
+</div>
+
+<div class="ins">
+  <div><img src="/Media/instur.jpg" alt="" width="400px"></div>
+  <div class="ins-text"><h1>Become an Instructor</h1>
+    <p>Instructors from around the world teach 
+     <br> millions of students on Udemy. We provide the <br> tools and skills to teach what you love.</p>
+    <button class="start">Start Teaching today</button></div>
+  
+</div>
 
 
 
